# otterly

./: LICENSE  README.md  docker-compose.dev.yaml
backend/: .air.toml  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  main.go
backend/.husky/hooks/: commit-msg  pre-commit
backend/app/controllers/: user_controller.go
backend/app/models/: user_model.go
backend/app/queries/: user_query.go
backend/app/validators/: user_validator.go
backend/cmd/: main.go
backend/db/: config.go
backend/db/migrations/: 000001_create_users_table.up.sql
backend/docs/: docs.go  swagger.json  swagger.yaml
backend/internal/configs/: app.go  chi.go  cors.go  server.go  validator.go  viper.go  zap.go
backend/internal/helpers/: response_handler.go  validator.go
backend/internal/route/: route.go
backend/internal/utils/: jwt.go  password.go  response_builder.go  server.go
backend/pkg/configs/: cors.go  env.go  server.go
backend/pkg/helpers/: error_handler.go  response.go  success_handler.go
backend/pkg/routes/: health_check_route.go  misc_routes.go  public_routes.go  swagger_route.go
backend/pkg/utils/: connection_url.go  env.go  logger.go  response.go  server.go  (+2 more)
backend/platform/: PLATFORM_LEVEL.md
mcp-host/: .gitignore  bun.lockb  package.json
mcp-host/src/: config.ts  index.ts
mcp-servers/google-map/: README.md  pyproject.toml  requirements.txt
mcp-servers/google-map/example/: example.py
mcp-servers/google-map/src/: google-map.py
mcp-servers/google-map/tests/: run_tests.py  test_google_map.py
(+18 files in other folders)
